<resources>
    <string name="app_name">PizziePizza</string>
    <string name="page_3">page 3</string>
    <string name="userid">UserID</string>
    <string name="card_no">Card No.</string>
    <string name="pizzie_pizza">Pizzie Pizza</string>
    <string name="pass">Pass</string>
    <string name="signup">SIGNUP</string>
    <string name="csv">CSV</string>
    <string name="login">LOGIN</string>
    <string name="sign_up">Sign up?</string>
    <string name="or">or</string>
    <string name="title_activity_home_page">HomePage</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="history">History</string>
    <string name="order">Order</string>
    <string name="combo_set">Combo Set</string>
    <string name="family_set">Family Set</string>
    <string name="others">Others</string>
    <string name="pizza">pizza</string>
    <string name="pasta">Pasta</string>
    <string name="french_fries">French Fries</string>
    <string name="chicken_wings">Chicken Wings</string>
    <string name="drinks">Drinks</string>
    <string name="home">Home</string>
    <string name="bbq_chicken">BBQ Chicken</string>
    <string name="hawaiian">Hawaiian</string>
    <string name="bolognese">Bolognese</string>
    <string name="cabonara">Cabonara</string>
    <string name="sprite">Sprite</string>
    <string name="coca_cola">Coca-Cola</string>
    <string name="_1">1</string>
    <string name="decrease">-</string>
    <string name="size_m">Size : M</string>
    <string name="size_l">Size : L</string>
    <string name="increase">+</string>
</resources>
